--- a/crisis-rpc-demo/view/pom.xml
+++ b/crisis-rpc-demo/view/pom.xml
@@ -5,15 +5,86 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}-demo</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc-demo</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-demo-view</artifactId>
-    <version>${project.version}</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>static</module>
-        <module>templates</module>
-    </modules>
+    <artifactId>crisis-rpc-demo-view</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-demo-web-home</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-demo-services-home-impl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-demo-services-adol-impl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
+        <!--<dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+        </dependency>-->
+    </dependencies>
+
+    <build>
+        <finalName>crisis-rpc</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <!--<configuration>
+                    <overlays>
+                        <overlay>
+                            <groupId>com.jeremie.spring</groupId>
+                            <artifactId>crisis-rpc-view-static</artifactId>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </overlay>
+                        <overlay>
+                            <groupId>com.jeremie.spring</groupId>
+                            <artifactId>crisis-rpc-web-home</artifactId>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </overlay>
+                    </overlays>
+                </configuration>-->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/</path>
+                    <port>8080</port>
+                    <contextReloadable>true</contextReloadable>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
