--- a/crisis-rpc-demo/view/pom.xml
+++ b/crisis-rpc-demo/view/pom.xml
@@ -35,10 +35,10 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-tools</artifactId>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
@@ -80,6 +80,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
+                    <uriEncoding>UTF-8</uriEncoding>
                     <path>/</path>
                     <port>8080</port>
                     <contextReloadable>true</contextReloadable>
