--- a/crisis-rpc-demo/view/pom.xml
+++ b/crisis-rpc-demo/view/pom.xml
@@ -21,6 +21,30 @@
         </dependency>
         <dependency>
             <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-demo-services-commons-impl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-client</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-remote-http</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-remote-mina</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <!--<dependency>
+            <groupId>com.jeremie.spring</groupId>
             <artifactId>crisis-rpc-demo-services-home-impl</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <type>jar</type>
@@ -30,7 +54,7 @@
             <artifactId>crisis-rpc-demo-services-adol-impl</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
