It is useful! But it use a long time.

--- a/crisis-rpc-demo/view/src/main/webapp/WEB-INF/templates/test.vm
+++ b/crisis-rpc-demo/view/src/main/webapp/WEB-INF/templates/test.vm
@@ -10,6 +10,7 @@
     testGetString : ${testGetString}<br>
     vmchange : ${vmchange} <br>
     adol : ${adol}<br>
+    user2 : ${user2}<br>
     vmreload
 </body>
 </html>
